--- a/package.json
+++ b/package.json
@@ -2,5 +2,15 @@
   "name": "wikipedia-api",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.7",
+    "eslint": "^7.13.0",
+    "git-commit-msg-linter": "^3.0.0",
+    "jest": "^26.6.3",
+    "sucrase": "^3.16.0",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.0.5"
+  }
 }
