--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.13.0",
+    "eslint-config-standard": "^16.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "git-commit-msg-linter": "^3.0.0",
     "jest": "^26.6.3",
-    "sucrase": "^3.16.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
   }
