--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wikipedia-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/wikipedia-api.js",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^26.0.15",
@@ -14,6 +14,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "git-commit-msg-linter": "^3.0.0",
+    "husky": "^4.3.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
