--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "main": "dist/wikipedia-api.js",
   "license": "MIT",
+  "scripts": {
+    "test": "jest --detectOpenHandles"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
+    "@types/request": "^2.48.5",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.13.0",
@@ -16,10 +20,12 @@
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
+    "nock": "^13.0.5",
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
   },
-  "scripts": {
-    "test": "jest"
+
+  "dependencies": {
+    "request": "^2.88.2"
   }
 }
