--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "dist/wikipedia-api.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest --detectOpenHandles"
+    "test:verbose":"jest --detectOpenHandles --runInBand",
+    "test": "npm run test:verbose -- --silent --noStackTrace",
+    "test:staged": "npm run test -- --findRelatedTests ./tests/*.*"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
@@ -20,11 +22,11 @@
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
+    "lint-staged": "^10.5.2",
     "nock": "^13.0.5",
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
   },
-
   "dependencies": {
     "request": "^2.88.2"
   }
