--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
     "*.ts": [
-        "eslint src/**/*.ts --fix",
+        "eslint src/**/*.ts tests/**/*.ts --fix",
         "npm run test:staged"
     ]
 }
