--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "main": "dist/wikipedia-api.js",
   "license": "MIT",
   "scripts": {
-    "test:verbose":"jest --detectOpenHandles --runInBand",
+    "test:verbose": "jest --detectOpenHandles --runInBand",
     "test": "npm run test:verbose -- --silent --noStackTrace",
     "test:staged": "npm run test -- --findRelatedTests ./tests/*.*",
-    "test:ci":"npm run test -- --coverage"
+    "test:ci": "npm run test -- --coverage"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
-    "@types/request": "^2.48.5",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.13.0",
@@ -28,7 +27,5 @@
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
   },
-  "dependencies": {
-    "request": "^2.88.2"
-  }
+  "dependencies": {}
 }
